--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -1,39 +1,53 @@
+
 {% extends 'base.html' %}
 {% load static %}
+{% load socialaccount %}
 
 {% block title %}Login - Vantor{% endblock %}
 
 {% block content %}
 <section class="cart-container">
     <div class="container">
-        <div style="max-width: 500px; margin: 0 auto;">
-            <h1 class="section-title text-center mb-lg">Login</h1>
-            
-            <div style="background-color: var(--color-white); padding: var(--space-lg);">
+        <div style="max-width: 500px; margin: 0 auto; padding-top: 1.2rem;">
+            <h1 class="section-title text-center" style="margin-bottom: 1.2rem;">Login</h1>
+            <div style="background-color: var(--color-white); padding: 2rem 2rem 1.2rem 2rem;">
                 <form method="post">
                     {% csrf_token %}
                     
-                    <div class="form-group">
-                        {{ form.username.label_tag }}
+                    <div class="form-group" style="margin-bottom: 0.7rem;">
+                        <span style="color: #555a60; font-weight: 600;">{{ form.username.label_tag }}</span>
                         {{ form.username }}
                         {{ form.username.errors }}
                     </div>
-                    
-                    <div class="form-group">
-                        {{ form.password.label_tag }}
+                    <div class="form-group" style="margin-bottom: 0.7rem;">
+                        <span style="color: #555a60; font-weight: 600;">{{ form.password.label_tag }}</span>
                         {{ form.password }}
                         {{ form.password.errors }}
                     </div>
-                    
-                    <button type="submit" class="btn" style="width: 100%; margin-top: var(--space-md);">
+                    <button type="submit" class="btn" style="width: 100%; margin-top: 0.3rem; margin-bottom: 0.3rem;">
                         Login
                     </button>
                 </form>
                 
-                <p class="text-center mt-md" style="color: var(--color-grey);">
-                    Don't have an account? 
-                    <a href="{% url 'accounts:register' %}" style="color: var(--color-black); text-decoration: underline;">Register here</a>
-                </p>
+                <div class="auth-footer">
+                    <div class="auth-divider">
+                        <span>or</span>
+                    </div>
+                    <a href="{% provider_login_url 'google' %}" class="google-btn">
+                        <svg class="google-btn__icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48" width="20" height="20">
+                            <path fill="#EA4335" d="M24 9.5c3.14 0 5.95 1.08 8.17 2.86l6.09-6.09C34.46 3.08 29.53 1 24 1 14.82 1 7.07 6.48 3.64 14.22l7.1 5.52C12.4 13.72 17.73 9.5 24 9.5z"/>
+                            <path fill="#4285F4" d="M46.5 24.5c0-1.64-.15-3.22-.42-4.75H24v9h12.68c-.55 2.97-2.22 5.48-4.73 7.17l7.27 5.65C43.18 37.54 46.5 31.5 46.5 24.5z"/>
+                            <path fill="#FBBC05" d="M10.74 28.26A14.57 14.57 0 0 1 9.5 24c0-1.49.26-2.93.74-4.26l-7.1-5.52A23.9 23.9 0 0 0 1 24c0 3.87.93 7.53 2.64 10.78l7.1-5.52z"/>
+                            <path fill="#34A853" d="M24 47c5.53 0 10.17-1.84 13.56-4.99l-7.27-5.65C28.44 37.6 26.33 38.5 24 38.5c-6.27 0-11.6-4.22-13.26-9.94l-7.1 5.52C7.07 41.52 14.82 47 24 47z"/>
+                        </svg>
+                        <span class="google-btn__text">Continue with Google</span>
+                    </a>
+                    <div class="auth-divider"></div>
+                    <div class="auth-login-link" style="color: #33383f; font-weight: 600;">
+                        Don't have an account?
+                        <a href="{% url 'accounts:register' %}">Register here</a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
